kubernetes/rpi-cluster/apps/monitoring/kube-prometheus-stack/app/httproute.yaml
#---
#apiVersion: gateway.networking.k8s.io/v1
#kind: HTTPRoute
#metadata:
#  name: http-link-redirect
#  namespace: home
#spec:
#  parentRefs:
#  - name: private-gateway
#    namespace: common
#    sectionName: http-link
#  hostnames:
#  - "*.k8s-homelab.dev"
#  rules:
#  - filters:
#    - type: RequestRedirect
#      requestRedirect:
#        scheme: https
#        statusCode: 301
#        port: 443
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  hostnames:
  - "grafana.${INTERNAL_DOMAIN}"
  parentRefs:
  - kind: Gateway
    name: private-gateway
    namespace: network
  rules:
  - backendRefs:
    - kind: Service
      name: kube-prometheus-stack-grafana
      port: 80
